--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activities.MyProfileActivity">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/backgroundProfile"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_weight="0.4"
-        android:background="@drawable/background"
+        android:background="@color/purple_200"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <agency.tango.android.avatarview.views.AvatarView
+            android:id="@+id/avatarView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="30dp"
-            android:src="@drawable/meteor" />
+            android:contentDescription="@string/profile_image"
+            app:av_border_color="@android:color/white"
+            app:av_border_width="4dp"
+            app:av_text_size_percentage="35" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,16 +41,19 @@
         android:id="@+id/detailsProfile"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backgroundProfile">
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/phone" />
+            android:contentDescription="@string/phone_icon"
+            android:src="@drawable/ic_baseline_phone_24" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,16 +76,19 @@
         android:id="@+id/detailsProfile1"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:layout_marginTop="86dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
-        android:layout_marginStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backgroundProfile">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsProfile">
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/email" />
+            android:contentDescription="@string/email_icon"
+            android:src="@drawable/ic_baseline_email_24" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,16 +110,21 @@
         android:id="@+id/detailsProfile2"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:layout_marginTop="166dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
-        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backgroundProfile">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailsProfile1"
+        app:layout_constraintVertical_bias="0.0">
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/department"/>
+            android:contentDescription="@string/department_image"
+            android:src="@drawable/department" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -128,21 +143,4 @@
     </LinearLayout>
 
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginTop="250dp"
-        android:background="@drawable/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backgroundProfile">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/back_to_home"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textSize="25sp">
-        </TextView>
-    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
