--- a/app/src/main/res/layout/list_item_courses.xml
+++ b/app/src/main/res/layout/list_item_courses.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -11,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:elevation="5dp"
+        app:cardBackgroundColor="@color/purple_200"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -25,21 +25,24 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins"
                 android:text="@string/courseNameHolder"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/textViewCourseDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/courseDate" />
+                android:text="@string/courseDate"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/textViewCourseTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins"
-                android:text="@string/courseTimeHolder" />
+                android:text="@string/courseTimeHolder"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/textViewCourseDetails"
@@ -47,7 +50,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_light"
-                android:text="@string/courseDetailsHolder" />
+                android:text="@string/courseDetailsHolder"
+                android:textColor="@color/white" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </FrameLayout>
