--- a/app/src/main/res/layout/list_people_details.xml
+++ b/app/src/main/res/layout/list_people_details.xml
@@ -5,20 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/image"
+    <agency.tango.android.avatarview.views.AvatarView
+        android:id="@+id/avatarView"
         android:layout_width="120dp"
         android:layout_height="135dp"
-
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:av_border_color="@android:color/white"
+        app:av_border_width="4dp"
+        app:av_text_size_percentage="35" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:orientation="vertical"
-        app:layout_constraintStart_toEndOf="@+id/image"
+        app:layout_constraintStart_toEndOf="@+id/avatarView"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -26,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="9dp"
-            android:text="main text"
+            android:text="@string/main_text"
             android:textColor="#000"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -36,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="sub text"
+            android:text="@string/sub_text"
             android:textColor="#000"
             android:textSize="13sp"
             android:textStyle="italic" />
@@ -46,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="sub text"
+            android:text="@string/sub_text"
             android:textColor="#000"
             android:textSize="13sp"
             android:textStyle="normal" />
