--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/schedule_dest">
 
@@ -37,7 +36,7 @@
     </fragment>
     <fragment
         android:id="@+id/people_details_dest"
-        android:name="com.example.fhict_companion_app_group1.fragments.fragment_people_details"
+        android:name="com.example.fhict_companion_app_group1.fragments.PeopleDetailsFragment"
         android:label="fragment_people_details" />
     <fragment
         android:id="@+id/profileFragment_dest"
